--- a/index.html
+++ b/index.html
@@ -6,29 +6,45 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Pokemon Cards</title>
     <link rel="stylesheet" href="stylesheet.css">
+    <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
     <script src="main.js"></script>
 </head>
-<body>
+<body onmousemove="mouseLog()" onmousedown="clickColor()">
+    <div id="poke-container">
+        <div id="pokeball-container">
+            <div id="pokeball">
+                <div class="pokeball-details" ></div>
+            </div>
+        </div>				
+    </div>   
 <div class="cardContainer">
-    <div id="card1"></div>
-    <div id="card2"></div>
-    <div id="card3"></div>
-    <div id="card4"></div>
-    <div id="card5"></div>
+    <div class="card1">
+        <div id="card1" onmouseover="waggleOn1()" onmouseout="waggleOff1()" onmousedown="showBall()"></div>
+        <button id="btn1" onclick="checkCard1()">Pick Me</button>
+    </div>
+    <div class="card1">
+        <div id="card2" onmouseover="waggleOn2()" onmouseout="waggleOff2()" onmousedown="showBall()"></div>
+        <button  id="btn2" onclick="checkCard2()">Pick Me</button>
+    </div>
+    <div class="card1">
+        <div id="card3" onmouseover="waggleOn3()" onmouseout="waggleOff3()" onmousedown="showBall()"></div>
+        <button id="btn3" onclick="checkCard3()">Pick Me</button>
+    </div>
+    <div class="card1">
+        <div id="card4" onmouseover="waggleOn4()" onmouseout="waggleOff4()" onmousedown="showBall()"></div>
+        <button  id="btn4" onclick="checkCard4()">Pick Me</button>
+    </div>
+    <div class="card1">
+        <div id="card5" onmouseover="waggleOn5()" onmouseout="waggleOff5()" onmousedown="showBall()"></div>
+        <button  id="btn5" onclick="checkCard5()">Pick Me</button>
+    </div>
 </div>
-<div class="btncontainer">
-    <button id="btn1" onclick="checkCard1()">Pick Me</button>
-    <button  id="btn2" onclick="checkCard2()">Pick Me</button>
-    <button  id="btn3" onclick="checkCard3()">Pick Me</button>
-    <button  id="btn4" onclick="checkCard4()">Pick Me</button>
-    <button  id="btn5" onclick="checkCard5()">Pick Me</button>
-</div>
-<div id="poke-container">
-    <div id="pokeball-container">
-        <div id="pokeball">
-            <div class="pokeball-details"></div>
+    <div class="main-container" id="maincontainer" style="display: none">
+        <div class="pokemon-top-part"></div>
+        <div class="pokemon-bottom-part">
+            <div class="white-part"></div>
+            <div class="black-line"></div>
         </div>
-    </div>				
-</div>
+    </div>
 </body>
 </html>
